# lid-backlightd

./: Cargo.toml  LICENSE  README.md  lid-backlightd.service
scripts/: build-deb.sh
src/: main.rs
