[package]
name = "lid-backlightd"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", features = ["tokio"] }
